apps/logiplan-terminal/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: logiplan-webterminal
  namespace: apps
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: logiplan-webterminal
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logiplan-webterminal
  namespace: apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: logiplan-webterminal
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: logiplan-webterminal
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: webterminal
          image: ghcr.io/acaburaz/logiplan-webterminal:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 5000
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 5000
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webterminal-ingress
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: testterminal-preview.logiplan.se
      http:
        paths:
          - backend:
              service:
                name: logiplan-webterminal
                port:
                  number: 5000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - testterminal-preview.logiplan.se
      secretName: testterminal-preview-tls
